k8s/transmission/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:3.6@sha256:56a7c4d9c47bd635576a6bca951cecf2b35aae39d490e8dec01d678e1316e92f
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: transmission
          resources:
            limits:
              cpu: 0.5
              memory: 1Gi
            requests:
              cpu: 0.25
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
